--- a/coffeerun/index.html
+++ b/coffeerun/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="size" value="Tall" checked>
+                <input type="radio" name="size" value="tall" checked>
                 Tall
               </label>
             </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group">
               <label for="flavorShot">Flavor Shot</label>
-              <select id="flavorShot" class="form-control" name="Flavor">
+              <select id="flavorShot" class="form-control" name="flavor">
                 <option value="">None</option>
                 <option value="caramel">Caramel</option>
                 <option value="almond">Almond</option>
@@ -57,8 +57,17 @@
           </form>
         </div>
       </div>
+
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>Pending Orders:</h4>
+          <div data-coffee-order="checklist">
+          </div>
+        </div>
+      </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="scripts/checklist.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/datastore.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
